[gd_scene load_steps=18 format=3 uid="uid://brjjat6j8gvna"]

[ext_resource type="Theme" uid="uid://xjn6s723t6oi" path="res://addons/proton_control_animation/examples/theme/pca_theme.tres" id="1_6mq3g"]
[ext_resource type="Script" uid="uid://dhoqx8lfhmiro" path="res://addons/proton_control_animation/examples/scripts/showcase.gd" id="2_xvnk3"]
[ext_resource type="Script" uid="uid://b4hvmk8t0qkgu" path="res://addons/proton_control_animation/src/proton_control_animation.gd" id="3_mdnh0"]
[ext_resource type="Script" uid="uid://bi4omyv2xson" path="res://addons/proton_control_animation/src/animations/scale.gd" id="4_s0040"]
[ext_resource type="Script" uid="uid://bsufjcw4lsn2a" path="res://addons/proton_control_animation/src/animations/slide.gd" id="5_c05e6"]
[ext_resource type="Script" uid="uid://p8liavl4kvv8" path="res://addons/proton_control_animation/src/proton_control_copy_animation.gd" id="6_01ri3"]
[ext_resource type="Texture2D" uid="uid://dc42tvb8iytlu" path="res://addons/proton_control_animation/examples/theme/assets/panel-000.png" id="7_amg16"]

[sub_resource type="Resource" id="Resource_dkxil"]
script = ExtResource("4_s0040")
from = 2
to = 2
to_absolute_scale = Vector2(1, 1)
easing = 1
transition = 10
metadata/_custom_type_script = ExtResource("4_s0040")

[sub_resource type="Resource" id="Resource_qbm01"]
script = ExtResource("4_s0040")
from = 2
from_absolute_scale = Vector2(1, 1)
to = 2
easing = 1
transition = 2
metadata/_custom_type_script = ExtResource("4_s0040")

[sub_resource type="Resource" id="Resource_unyg3"]
script = ExtResource("5_c05e6")
to = 3
to_local_offset = Vector2(20, 0)
easing = 1
default_duration = 0.18
metadata/_custom_type_script = ExtResource("5_c05e6")

[sub_resource type="Resource" id="Resource_iue33"]
script = ExtResource("5_c05e6")
to = 1
easing = 1
default_duration = 0.22
metadata/_custom_type_script = ExtResource("5_c05e6")

[sub_resource type="Resource" id="Resource_1rhje"]
script = ExtResource("5_c05e6")
to = 3
to_local_offset = Vector2(0, -45)
easing = 1
transition = 10
metadata/_custom_type_script = "uid://bsufjcw4lsn2a"

[sub_resource type="Resource" id="Resource_tploy"]
script = ExtResource("5_c05e6")
to = 1
easing = 1
transition = 9
metadata/_custom_type_script = "uid://bsufjcw4lsn2a"

[sub_resource type="Resource" id="Resource_jnopg"]
script = ExtResource("5_c05e6")
from = 3
from_local_offset = Vector2(300, 0)
to = 1
easing = 1
transition = 10
default_duration = 0.3
metadata/_custom_type_script = ExtResource("5_c05e6")

[sub_resource type="Resource" id="Resource_a6eo0"]
script = ExtResource("5_c05e6")
to = 3
to_local_offset = Vector2(400, 0)
easing = 1
transition = 2
default_duration = 0.3
metadata/_custom_type_script = ExtResource("5_c05e6")

[sub_resource type="Resource" id="Resource_j3cwm"]
script = ExtResource("5_c05e6")
to = 3
to_local_offset = Vector2(-30, 0)
easing = 1
transition = 2
default_duration = 0.18
metadata/_custom_type_script = ExtResource("5_c05e6")

[sub_resource type="Resource" id="Resource_rseu8"]
script = ExtResource("5_c05e6")
to = 1
easing = 1
transition = 2
default_duration = 0.18
metadata/_custom_type_script = ExtResource("5_c05e6")

[node name="Showcase" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6mq3g")
script = ExtResource("2_xvnk3")

[node name="Background" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
z_index = -100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.36, 0.378, 0.4, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="InfoPanem" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -104.0
offset_right = 180.0
offset_bottom = 81.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/InfoPanem"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Control/InfoPanem/VBoxContainer"]
layout_mode = 2
text = "Panels visibility"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="Control/InfoPanem/VBoxContainer"]
layout_mode = 2

[node name="ToggleCenter" type="Button" parent="Control/InfoPanem/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Center panel"

[node name="ToggleSide" type="Button" parent="Control/InfoPanem/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Side panel"

[node name="CenterPanel" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -191.0
offset_right = 145.5
offset_bottom = 191.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(145.5, 191)

[node name="ScaleUpAnimation" type="Node" parent="Control/CenterPanel" node_paths=PackedStringArray("target", "trigger_source")]
script = ExtResource("3_mdnh0")
target = NodePath("..")
animation = SubResource("Resource_dkxil")
duration = 0.3
trigger_source = NodePath("..")
on_show = true

[node name="ScaleDownAnimation" type="Node" parent="Control/CenterPanel" node_paths=PackedStringArray("target", "trigger_source")]
script = ExtResource("3_mdnh0")
target = NodePath("..")
animation = SubResource("Resource_qbm01")
duration = 0.3
trigger_source = NodePath("..")
on_hide = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterPanel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterPanel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SlideButton" type="Button" parent="Control/CenterPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Hover me!"

[node name="SlideButton2" type="Button" parent="Control/CenterPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Hover me!"

[node name="SlideButton3" type="Button" parent="Control/CenterPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Hover me!"

[node name="SlideButton4" type="Button" parent="Control/CenterPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Hover me!"

[node name="ButtonsHoverStartAnimation" type="Node" parent="Control/CenterPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
script = ExtResource("3_mdnh0")
animation = SubResource("Resource_unyg3")
on_hover_start = true

[node name="ProtonControlCopyAnimation" type="Node" parent="Control/CenterPanel/VBoxContainer/HBoxContainer/VBoxContainer/ButtonsHoverStartAnimation" node_paths=PackedStringArray("extra_targets")]
script = ExtResource("6_01ri3")
extra_targets = [NodePath("../../SlideButton"), NodePath("../../SlideButton2"), NodePath("../../SlideButton3"), NodePath("../../SlideButton4")]
metadata/_custom_type_script = "uid://p8liavl4kvv8"

[node name="ButtonsHoverEndAnimation" type="Node" parent="Control/CenterPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
script = ExtResource("3_mdnh0")
animation = SubResource("Resource_iue33")
on_hover_stop = true

[node name="ProtonControlCopyAnimation2" type="Node" parent="Control/CenterPanel/VBoxContainer/HBoxContainer/VBoxContainer/ButtonsHoverEndAnimation" node_paths=PackedStringArray("extra_targets")]
script = ExtResource("6_01ri3")
extra_targets = [NodePath("../../SlideButton"), NodePath("../../SlideButton2"), NodePath("../../SlideButton3"), NodePath("../../SlideButton4")]
metadata/_custom_type_script = "uid://p8liavl4kvv8"

[node name="VSeparator" type="VSeparator" parent="Control/CenterPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/CenterPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="TextureRect" type="TextureRect" parent="Control/CenterPanel/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
texture = ExtResource("7_amg16")
expand_mode = 1
stretch_mode = 3

[node name="SlideUpAnimation" type="Node" parent="Control/CenterPanel/VBoxContainer/HBoxContainer/VBoxContainer2/TextureRect" node_paths=PackedStringArray("target", "trigger_source")]
script = ExtResource("3_mdnh0")
target = NodePath("..")
animation = SubResource("Resource_1rhje")
duration = 0.2
trigger_source = NodePath("../../SlideUpButton")
on_pressed = true
metadata/_custom_type_script = "uid://b4hvmk8t0qkgu"

[node name="ResetSlideAnimation" type="Node" parent="Control/CenterPanel/VBoxContainer/HBoxContainer/VBoxContainer2/TextureRect" node_paths=PackedStringArray("target", "trigger_source")]
unique_name_in_owner = true
script = ExtResource("3_mdnh0")
target = NodePath("..")
animation = SubResource("Resource_tploy")
duration = 0.75
trigger_source = NodePath("..")
metadata/_custom_type_script = "uid://b4hvmk8t0qkgu"

[node name="SlideUpButton" type="Button" parent="Control/CenterPanel/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Press me!"

[node name="HSeparator2" type="HSeparator" parent="Control/CenterPanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButtonCenter" type="Button" parent="Control/CenterPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[node name="SidePanel" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -174.0
offset_bottom = 174.0
grow_horizontal = 0
grow_vertical = 2

[node name="SlideInAnimation" type="Node" parent="Control/SidePanel" node_paths=PackedStringArray("target", "trigger_source")]
script = ExtResource("3_mdnh0")
target = NodePath("..")
animation = SubResource("Resource_jnopg")
trigger_source = NodePath("..")
on_show = true

[node name="SlideOutAnimation" type="Node" parent="Control/SidePanel" node_paths=PackedStringArray("target", "trigger_source")]
script = ExtResource("3_mdnh0")
target = NodePath("..")
animation = SubResource("Resource_a6eo0")
trigger_source = NodePath("..")
on_hide = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/SidePanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="Control/SidePanel/VBoxContainer"]
layout_mode = 2
text = "Chain animations"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="Control/SidePanel/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/SidePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
texture = ExtResource("7_amg16")
expand_mode = 1
stretch_mode = 5

[node name="SlideLeft" type="Node" parent="Control/SidePanel/VBoxContainer/TextureRect" node_paths=PackedStringArray("target", "trigger_source")]
script = ExtResource("3_mdnh0")
target = NodePath("..")
animation = SubResource("Resource_j3cwm")
delay = 0.12
trigger_source = NodePath("../../../SlideInAnimation")
on_animation_end = true

[node name="SlideRight" type="Node" parent="Control/SidePanel/VBoxContainer/TextureRect" node_paths=PackedStringArray("target", "trigger_source")]
script = ExtResource("3_mdnh0")
target = NodePath("..")
animation = SubResource("Resource_rseu8")
delay = 0.12
trigger_source = NodePath("../../TextureRect3/SlideLeft")
on_animation_end = true

[node name="TextureRect2" type="TextureRect" parent="Control/SidePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
texture = ExtResource("7_amg16")
expand_mode = 1
stretch_mode = 5

[node name="SlideLeft" type="Node" parent="Control/SidePanel/VBoxContainer/TextureRect2" node_paths=PackedStringArray("target", "trigger_source")]
script = ExtResource("3_mdnh0")
target = NodePath("..")
animation = SubResource("Resource_j3cwm")
delay = 0.12
trigger_source = NodePath("../../TextureRect/SlideLeft")
on_animation_end = true

[node name="SlideRight" type="Node" parent="Control/SidePanel/VBoxContainer/TextureRect2" node_paths=PackedStringArray("target", "trigger_source")]
script = ExtResource("3_mdnh0")
target = NodePath("..")
animation = SubResource("Resource_rseu8")
delay = 0.12
trigger_source = NodePath("../../TextureRect/SlideRight")
on_animation_end = true

[node name="TextureRect3" type="TextureRect" parent="Control/SidePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
texture = ExtResource("7_amg16")
expand_mode = 1
stretch_mode = 5

[node name="SlideLeft" type="Node" parent="Control/SidePanel/VBoxContainer/TextureRect3" node_paths=PackedStringArray("target", "trigger_source")]
script = ExtResource("3_mdnh0")
target = NodePath("..")
animation = SubResource("Resource_j3cwm")
delay = 0.12
trigger_source = NodePath("../../TextureRect2/SlideLeft")
on_animation_end = true

[node name="SlideRight" type="Node" parent="Control/SidePanel/VBoxContainer/TextureRect3" node_paths=PackedStringArray("target", "trigger_source")]
script = ExtResource("3_mdnh0")
target = NodePath("..")
animation = SubResource("Resource_rseu8")
delay = 0.12
trigger_source = NodePath("../../TextureRect2/SlideRight")
on_animation_end = true

[node name="HSeparator2" type="HSeparator" parent="Control/SidePanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButtonSide" type="Button" parent="Control/SidePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"
